# myTest

./: .gitignore  PreviewFeatures.stories.schema.json  PreviewFeatures.stories.tsx  README.md  deploy.config.json  experiment.json  index.html  package-lock.json  package.json  pipeline.py  preview-features.schema.json  pyproject.toml  test_all_templates.py  test_schemas.py  tsconfig.json  tsconfig.tsbuildinfo
.github/: copilot-instructions.md
.github/skills/: .skill-organizer.manifest.json
.github/skills/component-audit/: SKILL.md
.github/skills/deploy-to-hub/: SKILL.md
.github/skills/experiment-helper/: SKILL.md
.github/skills/iconcloud-browser/: SKILL.md
.github/skills/iconcloud-browser/references/: api-reference.md
.github/skills/page-builder/: SKILL.md
.github/skills/page-builder/references/: component-catalog.md  fluent-icon-reference.md  layout-decision.md  page-examples.md  schema-reference.md
.github/skills/page-review/: SKILL.md
.github/workflows/: deploy-to-hub.yml  tag-repo.yml
azure_builder_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
schemas/: __init__.py  catalog_summary.py  codegen.py  elements.py  json_schema.py  loader.py  page.py  validator.py
scripts/: deploy-to-hub.ts
src/: main.tsx
src/main/: index.tsx
src/shell/: App.tsx
